tests/duplicate_libs/duplicate_libs.exp
Error ------------------------------------------------------------------------------------------- lib/shared/lib.js:3:13

This name declaration overrides an existing binding `global_foo` [1]. Overriding in library definitions can lead to
surprising behaviors. [libdef-override]

   3| declare var global_foo: number; // intentional-libdef-override
                  ^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------- lib/shared/lib.js:5:16

This module declaration overrides an existing module `bar` [1]. Overriding in library definitions can lead to surprising
behaviors. [libdef-override]

   5| declare module 'bar' {
                     ^^^^^ [1]


Error ------------------------------------------------------------------------------------------------------ test.js:1:2

Cannot cast `global_foo` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:1:2
   1| (global_foo: string); // error: number ~> string
       ^^^^^^^^^^

References:
   lib/shared/lib.js:3:25
   3| declare var global_foo: number; // intentional-libdef-override
                              ^^^^^^ [1]
   test.js:1:14
   1| (global_foo: string); // error: number ~> string
                   ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:2:2

Cannot cast `require(...)` to number because string [1] is incompatible with number [2]. [incompatible-type]

   test.js:2:2
   2| (require('bar'): number); // error: string ~> number
       ^^^^^^^^^^^^^^

References:
   lib/shared/lib.js:6:27
   6|   declare module.exports: string;
                                ^^^^^^ [1]
   test.js:2:18
   2| (require('bar'): number); // error: string ~> number
                       ^^^^^^ [2]



Found 4 errors
